// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText should accept disabled 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  disabled={true}
  type="text"
/>
`;

exports[`InputText should accept readOnly 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  readOnly={true}
  type="text"
/>
`;

exports[`InputText should accept required 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  required={true}
  type="text"
/>
`;

exports[`InputText with a placeholder 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  placeholder="I am a placeholder"
  type="text"
/>
`;

exports[`InputText with a value 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  type="text"
  value="Some value"
/>
`;

exports[`InputText with an error validation 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`InputText with aria-describedby 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  aria-describedby="some-id"
  className="c0"
  type="text"
/>
`;

exports[`InputText with name and id 1`] = `
.c0 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

<input
  className="c0"
  id="Bobby"
  name="Bob"
  type="text"
/>
`;
